--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
-    "deploy": "node ./config/site.deploy.js"
+    "deploy-prev": "node ./config/site.deploy.js",
+    "deploy": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js && cp ./dist/index.html ./dist/200.html && yarn netlify deploy --dir=dist --prod"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
